// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductAddComponent should save 1`] = `
Object {
  "color": "COLOR",
  "discontinuedDate": Any<Date>,
  "id": undefined,
  "listPrice": 0,
  "name": "NAME",
  "num": "NUM-nul-num-10",
  "orderLineItems": null,
  "productCategory": Object {},
  "productCategoryId": "PRODUCT_CATEGORY_ID",
  "productModel": Object {},
  "productModelId": "PRODUCT_MODEL_ID",
  "sellEndDate": Any<Date>,
  "sellStartDate": Any<Date>,
  "size": "SIZE",
  "standardCost": 0,
  "thumbNailPhoto": "THUMB_NAIL_PHOTO",
  "weight": 0,
}
`;

exports[`ProductEditComponent should update 1`] = `
Object {
  "color": "COLOR",
  "discontinuedDate": Any<Date>,
  "id": "ID",
  "listPrice": 0,
  "name": "NAME",
  "num": "NUM-num-10",
  "orderLineItems": null,
  "productCategory": Object {},
  "productCategoryId": "PRODUCT_CATEGORY_ID",
  "productModel": Object {},
  "productModelId": "PRODUCT_MODEL_ID",
  "sellEndDate": Any<Date>,
  "sellStartDate": Any<Date>,
  "size": "SIZE",
  "standardCost": 0,
  "thumbNailPhoto": "THUMB_NAIL_PHOTO",
  "weight": 0,
}
`;
